--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "webpack -w --config webpack/webpack.config.dev-build.js  --colors"
   },
   "dependencies": {
+    "flatpickr": "^4.5.2",
     "font-awesome": "^4.7.0",
+    "gemini-datepicker": "^1.0.16",
     "jquery": "^3.3.1",
     "uikit": "^3.0.0-rc.10"
   },
